--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,20 @@
 {
-  "extends": "gulp",
-  "parserOptions": {
-    "ecmaVersion": 2015
-  },
-  "rules": {
-    "node/no-unsupported-features/es-syntax": [
-      2,
-      {
-        "version": ">=10"
-      }
-    ]
-  }
+    "env": {
+        "browser": true,
+        "commonjs": true,
+        "es2021": true
+    },
+    "extends": [
+        "eslint:recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": 12
+    },
+    "plugins": [
+        "@typescript-eslint"
+    ],
+    "rules": {
+        "no-undef": "off"
+    }
 }
