--- a/package.json
+++ b/package.json
@@ -1,16 +1,7 @@
 {
-  "name": "gulp-pug",
-  "version": "5.0.0",
-  "description": "Gulp plugin for compiling Pug templates",
-  "nyc": {
-    "reporter": [
-      "lcov",
-      "text-summary"
-    ]
-  },
-  "prettier": {
-    "singleQuote": true
-  },
+  "name": "gulp-jade",
+  "version": "0.7.2",
+  "description": "Compile Jade templates",
   "keywords": [
     "jade",
     "pug",
@@ -26,7 +17,7 @@
   ],
   "types": "./index.d.ts",
   "engines": {
-    "node": ">=10.13.0"
+    "node": ">=12"
   },
   "scripts": {
     "pretest": "npm run lint",
@@ -45,6 +36,7 @@
   "devDependencies": {
     "@types/node": "^14.0.0",
     "@types/pug": "^2.0.4",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
     "eslint": "^7.0.0",
     "eslint-config-gulp": "^5.0.0",
     "expect": "^27.0.2",
